// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner should render component with custom nextStepName 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: #D5D8DE;
}

.c5 {
  width: 50%;
  background-color: #0062FF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 8px;
}

.c2 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
}

.c3 {
  white-space: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 {
  width: 100%;
  -webkit-align-text: left;
  -ms-flex-line-packalign-text: left;
  align-text: left;
  margin-top: 8px;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

<body>
    <div>
      <div
        class="c0"
      >
        <div
          aria-hidden="true"
          class="c1"
        >
          <div
            class="c2"
          >
            Название третьего шага
          </div>
          <div
            class="c3"
          >
            3
             из 
            6
             
            шагов
          </div>
        </div>
        <div
          class="c4"
        >
          <div
            aria-valuemax="6"
            aria-valuemin="0"
            aria-valuenow="3"
            aria-valuetext="шаг 3: название третьего шага"
            class="c5"
            role="progressbar"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="c6"
        >
          Далее следует шаг: название четвертого шага
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: #D5D8DE;
}

.c5 {
  width: 50%;
  background-color: #0062FF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 8px;
}

.c2 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
}

.c3 {
  white-space: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 {
  width: 100%;
  -webkit-align-text: left;
  -ms-flex-line-packalign-text: left;
  align-text: left;
  margin-top: 8px;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

<div>
    <div
      class="c0"
    >
      <div
        aria-hidden="true"
        class="c1"
      >
        <div
          class="c2"
        >
          Название третьего шага
        </div>
        <div
          class="c3"
        >
          3
           из 
          6
           
          шагов
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          aria-valuemax="6"
          aria-valuemin="0"
          aria-valuenow="3"
          aria-valuetext="шаг 3: название третьего шага"
          class="c5"
          role="progressbar"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="c6"
      >
        Далее следует шаг: название четвертого шага
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Spinner should render component with custom stepName 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: #D5D8DE;
}

.c5 {
  width: 50%;
  background-color: #0062FF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 8px;
}

.c2 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
}

.c3 {
  white-space: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 {
  width: 100%;
  -webkit-align-text: left;
  -ms-flex-line-packalign-text: left;
  align-text: left;
  margin-top: 8px;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

<body>
    <div>
      <div
        class="c0"
      >
        <div
          aria-hidden="true"
          class="c1"
        >
          <div
            class="c2"
          >
            Название третьего этапа
          </div>
          <div
            class="c3"
          >
            3
             из 
            6
             
            этапов
          </div>
        </div>
        <div
          class="c4"
        >
          <div
            aria-valuemax="6"
            aria-valuemin="0"
            aria-valuenow="3"
            aria-valuetext="этап 3: название третьего этапа"
            class="c5"
            role="progressbar"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="c6"
        >
          Далее - название четвертого этапа
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: #D5D8DE;
}

.c5 {
  width: 50%;
  background-color: #0062FF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 8px;
}

.c2 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
}

.c3 {
  white-space: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 {
  width: 100%;
  -webkit-align-text: left;
  -ms-flex-line-packalign-text: left;
  align-text: left;
  margin-top: 8px;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

<div>
    <div
      class="c0"
    >
      <div
        aria-hidden="true"
        class="c1"
      >
        <div
          class="c2"
        >
          Название третьего этапа
        </div>
        <div
          class="c3"
        >
          3
           из 
          6
           
          этапов
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          aria-valuemax="6"
          aria-valuemin="0"
          aria-valuenow="3"
          aria-valuetext="этап 3: название третьего этапа"
          class="c5"
          role="progressbar"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="c6"
      >
        Далее - название четвертого этапа
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Spinner should render component without nextStepName 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: #D5D8DE;
}

.c5 {
  width: 50%;
  background-color: #0062FF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 8px;
}

.c2 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
}

.c3 {
  white-space: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

<body>
    <div>
      <div
        class="c0"
      >
        <div
          aria-hidden="true"
          class="c1"
        >
          <div
            class="c2"
          >
            Название третьего шага
          </div>
          <div
            class="c3"
          >
            3
             из 
            6
             
            шагов
          </div>
        </div>
        <div
          class="c4"
        >
          <div
            aria-valuemax="6"
            aria-valuemin="0"
            aria-valuenow="3"
            aria-valuetext="шаг 3: название третьего шага"
            class="c5"
            role="progressbar"
            tabindex="0"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: #D5D8DE;
}

.c5 {
  width: 50%;
  background-color: #0062FF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 8px;
}

.c2 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
}

.c3 {
  white-space: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

<div>
    <div
      class="c0"
    >
      <div
        aria-hidden="true"
        class="c1"
      >
        <div
          class="c2"
        >
          Название третьего шага
        </div>
        <div
          class="c3"
        >
          3
           из 
          6
           
          шагов
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          aria-valuemax="6"
          aria-valuemin="0"
          aria-valuenow="3"
          aria-valuetext="шаг 3: название третьего шага"
          class="c5"
          role="progressbar"
          tabindex="0"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Spinner should render default component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: #D5D8DE;
}

.c5 {
  width: 50%;
  background-color: #0062FF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 8px;
}

.c2 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
}

.c3 {
  white-space: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 {
  width: 100%;
  -webkit-align-text: left;
  -ms-flex-line-packalign-text: left;
  align-text: left;
  margin-top: 8px;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

<body>
    <div>
      <div
        class="c0"
      >
        <div
          aria-hidden="true"
          class="c1"
        >
          <div
            class="c2"
          >
            Название третьего шага
          </div>
          <div
            class="c3"
          >
            3
             из 
            6
             
            шагов
          </div>
        </div>
        <div
          class="c4"
        >
          <div
            aria-valuemax="6"
            aria-valuemin="0"
            aria-valuenow="3"
            aria-valuetext="шаг 3: название третьего шага"
            class="c5"
            role="progressbar"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="c6"
        >
          Далее - название четвертого шага
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: #D5D8DE;
}

.c5 {
  width: 50%;
  background-color: #0062FF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 8px;
}

.c2 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
}

.c3 {
  white-space: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 {
  width: 100%;
  -webkit-align-text: left;
  -ms-flex-line-packalign-text: left;
  align-text: left;
  margin-top: 8px;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

<div>
    <div
      class="c0"
    >
      <div
        aria-hidden="true"
        class="c1"
      >
        <div
          class="c2"
        >
          Название третьего шага
        </div>
        <div
          class="c3"
        >
          3
           из 
          6
           
          шагов
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          aria-valuemax="6"
          aria-valuemin="0"
          aria-valuenow="3"
          aria-valuetext="шаг 3: название третьего шага"
          class="c5"
          role="progressbar"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="c6"
      >
        Далее - название четвертого шага
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Spinner should render mobile component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: #D5D8DE;
}

.c5 {
  width: 50%;
  background-color: #0062FF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 8px;
}

.c2 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
}

.c3 {
  white-space: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 {
  width: 100%;
  -webkit-align-text: left;
  -ms-flex-line-packalign-text: left;
  align-text: left;
  margin-top: 8px;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

<body>
    <div>
      <div
        class="c0"
      >
        <div
          aria-hidden="true"
          class="c1"
        >
          <div
            class="c2"
          >
            Название третьего шага
          </div>
          <div
            class="c3"
          >
            3
             из 
            6
             
            шагов
          </div>
        </div>
        <div
          class="c4"
        >
          <div
            aria-valuemax="6"
            aria-valuemin="0"
            aria-valuenow="3"
            aria-valuetext="шаг 3: название третьего шага"
            class="c5"
            role="progressbar"
            tabindex="0"
          />
        </div>
        <div
          aria-hidden="true"
          class="c6"
        >
          Далее - название четвертого шага
        </div>
      </div>
    </div>
  </body>,
  "container": .c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  min-width: 388px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  height: 4px;
  border-radius: 2px;
  background-color: #D5D8DE;
}

.c5 {
  width: 50%;
  background-color: #0062FF;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 8px;
}

.c2 {
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  font-feature-settings: 'tnum' on,'lnum' on;
  color: #23262D;
}

.c3 {
  white-space: nowrap;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

.c6 {
  width: 100%;
  -webkit-align-text: left;
  -ms-flex-line-packalign-text: left;
  align-text: left;
  margin-top: 8px;
  color: #717681;
  font-family: 'VTB Group UI',sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  font-feature-settings: 'tnum' on,'lnum' on;
}

<div>
    <div
      class="c0"
    >
      <div
        aria-hidden="true"
        class="c1"
      >
        <div
          class="c2"
        >
          Название третьего шага
        </div>
        <div
          class="c3"
        >
          3
           из 
          6
           
          шагов
        </div>
      </div>
      <div
        class="c4"
      >
        <div
          aria-valuemax="6"
          aria-valuemin="0"
          aria-valuenow="3"
          aria-valuetext="шаг 3: название третьего шага"
          class="c5"
          role="progressbar"
          tabindex="0"
        />
      </div>
      <div
        aria-hidden="true"
        class="c6"
      >
        Далее - название четвертого шага
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
